Correction after the third mentoring session. Fixed overflow on projects thumbnail when going to a smaller device on Google Chrome. Fixed JavaScript Skill broken name when going to an iPad on Google Chrome. Reduced the size of social icons on Home Page

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -90,7 +90,7 @@ a:link, a:visited, a:active{
 
 /*Increases the sixe of the social icons in the Home Page*/
 .main-social{
-    font-size: 2.5rem;
+    font-size: 1.8rem;
 }
 
 .list-inline-item:not(:last-child){
@@ -163,7 +163,6 @@ a:link, a:visited, a:active{
 /* EXPERIENCE PAGE */
 
 .img-project{
-    max-width: 200px;
     max-height: 200px;
 }
 
